styles.css
body {
  background-color: rgb(250, 240, 240);
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: auto;

  overflow: hidden;
  position: relative;
}

.bookCard {
  height: 10rem;
  width: 7rem;
  /*  background-color: rgb(238, 49, 69); */
  border-radius: 2rem;
  padding: 2rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  border: solid 1px rgb(179, 179, 179);
  align-items: center;
  filter: drop-shadow(10px 5px 5px #d8a9a9);
}
.bookCard > div {
  text-align: center;
  width: 75px;
}
.cardTitle {
  color: rgb(80, 80, 212);
  background-color: #fff;
}
#shelf {
  width: 50rem;
  min-height: 40rem;
  background-color: rgb(243, 182, 182);
  border-radius: 2rem;
  padding: 2rem;
  margin-top: 3.5rem;
  gap: 2rem;
}
#actualShelf {
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  justify-content: space-around;
}
#bookForm {
  width: 25rem;
  background-color: rgb(252, 243, 243);
  border-radius: 1rem;
  filter: drop-shadow(20px 10px 15px #b17979);
}
form {
  padding: 2rem;
  font-size: small;
}
form > div {
  display: flex;
  flex-direction: column;
  margin: 1rem;
}
input {
  border: solid 1px rgb(207, 207, 207);
  border-radius: 3px;
}
.buttonContainer {
  flex-direction: row;
}
#pages {
  width: 2rem;
}
#addToLibrary,
#newBook {
  background-color: rgb(201, 98, 98);
  color: #fff;
  font-weight: bold;
  font-size: 1rem;
  border: none 0px;
  border-radius: 4px;
  padding: 0.4rem;
}
button:hover {
  cursor: pointer;
}

.centerForm {
  position: absolute;
  top: 30%;
  opacity: 100%;
  transition: 300ms;
  transition-timing-function: ease-out;
}

.hideForm {
  position: absolute;
  top: -300px;
  opacity: 0%;
}

.header {
  height: 7rem;
  display: flex;
  justify-content: start;
  flex-direction: column;
  align-items: center;
  margin: auto;
  margin-top: 0%;
  margin-bottom: 1rem;
}
h1 {
  font-size: 4rem;
  margin: 0;
}

